--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#intro">Home</a></li>
-        <li><a href="#about">About</a></li>
-		<li><a href="#service">Service</a></li>
-		<li><a href="#contact">Contact</a></li>
+        <li class="active"><a href="#intro">主页</a></li>
+        <li><a href="#about">关于融胜</a></li>
+		<li><a href="#service">产品服务</a></li>
+		<li><a href="#contact">联系我们</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">下载 <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#">Example menu</a></li>
             <li><a href="#">Example menu</a></li>
