--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Our Services</h2>
+					<h2>服务内容</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -188,7 +188,7 @@
 						<img src="img/icons/service-icon-1.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Print</h5>
+						<h5>方案定制</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -201,7 +201,7 @@
 						<img src="img/icons/service-icon-2.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Web Design</h5>
+						<h5>网站建设</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -214,7 +214,7 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Photography</h5>
+						<h5>企划宣传</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -227,7 +227,7 @@
 						<img src="img/icons/service-icon-4.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Cloud System</h5>
+						<h5>全程辅导</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -249,7 +249,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Get in touch</h2>
+					<h2>联系登记</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -276,13 +276,13 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="name">
-                                Name</label>
+                                称呼</label>
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                             <div class="validation"></div>
                         </div>
                         <div class="form-group">
                             <label for="email">
-                                Email Address</label>
+                                电子邮箱</label>
                             <div class="form-group">
                                 <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                                 <div class="validation"></div>
@@ -290,7 +290,7 @@
                         </div>
                         <div class="form-group">
                             <label for="subject">
-                                Subject</label>
+                                主题</label>
                             <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                             <div class="validation"></div>
                         </div>
@@ -298,14 +298,14 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="name">
-                                Message</label>
+                                内容简述</label>
                             <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                             <div class="validation"></div>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-                            Send Message</button>
+                            发送邮件</button>
                     </div>
                 </div>
                 </form>
@@ -314,7 +314,7 @@
 
 		<div class="col-lg-4">
 			<div class="widget-contact">
-				<h5>Main Office</h5>
+				<h5>办公地址</h5>
 
 				<address>
 				  <strong>Squas Design, Inc.</strong><br>
@@ -328,7 +328,7 @@
 				  <a href="mailto:#">email.name@example.com</a>
 				</address>
 				<address>
-				  <strong>We're on social networks</strong><br>
+				  <strong>社交媒体</strong><br>
                        	<ul class="company-social">
                             <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
